# tlaqktek

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/app/: database.py
backend/app/api/: auth.py  deps.py  items.py  platforms.py  users.py
backend/app/clients/: bunjang.py  joongna.py
backend/app/core/: config.py  encryption.py  redis.py  security.py
backend/app/intelligence/: _exaone.py  pipelines.py
backend/app/models/: connected_platform.py  user.py
backend/app/schemas/: auth.py  item.py  platform.py
backend/app/services/: search.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/components/: SearchApp.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Header.tsx  LoadingSpinner.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
